# serial-tool

./: CMakeLists.txt  Makefile  SerialToolConfig.h
include/: globals.h  modbus_utils.h  serial_utils.h  string_utils.h  ui_utils.h
src/: SerialToolConfig.h.in  main.c  modbus_utils.c  serial_utils.c  string_utils.c  ui.led  ui_utils.c
